simplify and refactor the make

--- a/tests/misc/Makefile
+++ b/tests/misc/Makefile
@@ -4,7 +4,7 @@ OPT=-O2 -lm
 all: compiler_output program.ll
 
 compiler_output: program.bc ../misc/HALIDE.o
-	timeout 10m cat-c $^ 2> $@
+	timeout 10m halide-c $^ 2> $@
 
 program.bc: program.c
 	clang $(OPTIONS) -O1 -fdeclspec -emit-llvm -c $<
@@ -15,23 +15,23 @@ program.ll: program.bc
 program: program.bc ../misc/HALIDE.o
 	clang $(OPTIONS) $^ -o $@
 
-check: compiler_output
-	../misc/check.sh
+# check: compiler_output
+# 	../misc/check.sh
 
 ../misc/HALIDE.o: ../misc/HALIDE.c
 	clang $(OPT) -fdeclspec -c $^ -o $@
 
-install: program.bc program.ll
-	cp *.bc *.ll bitcode/
-
-oracle: compiler_output
-	mkdir -p output
-	mv $^ output/oracle_output.txt
-
+# install: program.bc program.ll
+# 	cp *.bc *.ll bitcode/
+#
+# oracle: compiler_output
+# 	mkdir -p output
+# 	mv $^ output/oracle_output.txt
+#
 clean:
 	rm -rf program program_optimized program_optimized_output *.bc *.ll a.out diff core* program_output compiler_output *.txt tmpOut;
 	if test -d bitcode ; then cp bitcode/* . ; fi ;
 	rm -f *sorted ;
 
-.PHONY: run oracle check clean install
+.PHONY: run clean 
 
