--- a/pass/CMakeLists.txt
+++ b/pass/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Sources
 file(GLOB HALIDEPassSrc "*.cpp")
 
+
 # Compilation flags
 set_source_files_properties(${HALIDEPassSrc} PROPERTIES COMPILE_FLAGS " -std=c++2a")
 
@@ -19,7 +20,9 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
+# add llvm and noelle 
 include_directories(${LLVM_INCLUDE_DIRS})
+include_directories(${LLVM_INCLUDE_DIRS} /home/tht5102/snoelle/install/include)
 
 # Declare the LLVM pass to compile
 add_llvm_library(${HALIDEPassName} MODULE ${HALIDEPassSrc})
